Search Button with List element

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>My Vission Board</title>
 </head>
 <body>
-    
+    <div class="sidenav">
+        <input type="text" class="search-input" placeholder="Search...">
+        <button class="search-button">Search</button>
+        <ul class="previous-searches">
+          <li>Previous Search 1</li>
+          <li>Previous Search 2</li>
+          <li>Previous Search 3</li>
+        </ul>
+      </div>
 </body>
 </html>
