--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Vission Board</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>My Vision Board</title>
+  </head>
+  <body>
+    <header class="header"></header>
+    <div>
+      <search class="search"></search>
+      <results class="results"></results>
+    </div>
+    <div>
+      <title class="title">Title Placeholder</title>
+      <div class="vision-board"></div>
+    </div>
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
