api fetch request

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <results class="results"></results>
     </div>
     <div>
+      <div id="quotesDisplay"></div>
       <title class="title">Title Placeholder</title>
       <div class="vision-board"></div>
     </div>
