added test quote button

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,17 +11,22 @@
     <title>My Vision Board</title>
   </head>
   <body>
-    <header class="header"></header>
+    <header class="header">
+      <button class="test-quote">Click to Get Your Inspirational Quote!</button>
+    </header>
+
     <div>
-      <search>
-        <input type="text" class="search-input" placeholder="Search...">
+      <form>
+        <input type="text" class="search-input" placeholder="Search..." />
         <button class="search-button">Search</button>
-      </search>
+      </form>
       <results class="results"></results>
     </div>
+
     <div>
       <title class="title">Title Placeholder</title>
       <div class="vision-board"></div>
     </div>
     <script src="./assets/js/script.js"></script>
   </body>
+</html>
