added search bar for title and topic

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
     <div>
       <form>
-        <input type="text" class="search-input" placeholder="Search..." />
+        <label for="vision-board-title">Create a Title for your Vision Board:</label><br>
+        <input type="text" class="vision-board-title" placeholder="Enter your title here"><br>
+        <label for="search-input">Search for a topic:</label><br>
+        <input type="text" class="search-input" placeholder="Search..." /><br>
         <button class="search-button">Search</button>
       </form>
       <results class="results"></results>
@@ -25,7 +28,9 @@
 
     <div>
       <title class="title">Title Placeholder</title>
-      <div class="vision-board"></div>
+      <div class="vision-board">
+        
+      </div>
     </div>
     <script src="./assets/js/script.js"></script>
   </body>
