--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header class="header">
       <button class="getQuotes">Click to Get Your Inspirational Quote!</button>
     </header>
+    <div class="quotesDisplay results"></div>
 
     <!-- Sidebar with search bars and giphy results -->
     <div>
