--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <input type="text" class="search-input" placeholder="Search..." /><br>
         <button class="search-button">Search</button>
       </form>
+      <button id="clear">Clear</button>
       <results class="results"></results>
     </div>
 
