--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           /><br />
           <button class="button is-info search-button">Search</button>
         </form>
+        <button id="clear">Clear</button>
         <results class="results"></results>
       </div>
 
