deleted pseudocode and styled clear button

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
     <header class="header hero is-info">
       <div class="quotesDisplay hero-body title has-text-centered"></div>
       <button class="button getQuotes is-info is-light is-rounded">
-        
         Click to Get Your Inspirational Quote!
       </button>
-      
     </header>
 
     <div class="tile">
@@ -42,9 +40,13 @@
             class="search-input"
             placeholder="Search..."
           /><br />
-          <button class="button is-info search-button is-small is-rounded">Search</button>
+          <button class="button is-info search-button is-small is-rounded">
+            Search
+          </button>
         </form>
-        <button id="clear">Clear</button>
+        <button class="button is-info is-small is-rounded" id="clear">
+          Clear
+        </button>
         <results class="results"></results>
       </div>
 
@@ -52,12 +54,12 @@
       <div class="vision-board is-align-self-center">
         <div class="subtitle has-text-centered" id="title-placeholder"></div>
         <div class="grid-container">
-          <div class="grid-item ">Item 1</div>
-          <div class="grid-item ">Item 2</div>
-          <div class="grid-item ">Item 3</div>
-          <div class="grid-item ">Item 4</div>
-          <div class="grid-item ">Item 5</div>
-          <div class="grid-item ">Item 6</div>
+          <div class="grid-item">Item 1</div>
+          <div class="grid-item">Item 2</div>
+          <div class="grid-item">Item 3</div>
+          <div class="grid-item">Item 4</div>
+          <div class="grid-item">Item 5</div>
+          <div class="grid-item">Item 6</div>
         </div>
       </div>
     </div>
