--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <title>My Vision Board</title>
   </head>
   <body>
