--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         <button class="button is-info is-small is-rounded" id="clear">
           Clear
         </button>
+        <div id="containResults">
         <results class="results"></results>
+        </div>
       </div>
 
       <!-- Main vision board -->
