deleted figcaption and added drag/drop

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+   
     <title>My Vision Board</title>
   </head>
   <body>
@@ -49,18 +49,26 @@
           Clear
         </button>
         <div id="containResults">
-        <results class="results"></results>
+          <results class="results"></results>
         </div>
       </div>
 
       <!-- Main vision board -->
-      <div class="vision-board is-align-self-center">
-        <div class="subtitle has-text-centered is-uppercase" id="title-placeholder"></div>
-        <section class="box has-background-info-light" id="board-box"></section>
-    
+      <div class="is-align-items-center">
+        <div
+          class="subtitle has-text-centered is-uppercase"
+          id="title-placeholder"
+        ></div>
+        <section
+          class="droppable box has-background-link-light"
+          id="board-box"
+        ></section>
       </div>
     </div>
 
     <script src="./assets/js/script.js"></script>
+   
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </body>
 </html>
