Working local storage

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             Search
           </button>
         </form>
+        <ul class="previousSearch">
+
+        </ul>
         <button class="button is-info is-small is-rounded" id="clear">
           Clear
         </button>
