drag/drop changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header hero is-info">
-      <div class="quotesDisplay hero-body title has-text-centered"></div>
+      <div class="quotesDisplay is-italic is-2 hero-body title has-text-centered"></div>
       <button class="button getQuotes is-info is-light is-rounded">
         Click to Get Your Inspirational Quote!
       </button>
@@ -57,7 +57,7 @@
       <!-- Main vision board -->
       <div class="is-align-items-center">
         <div
-          class="subtitle has-text-centered is-uppercase"
+          class="subtitle is-3 has-text-centered is-uppercase is-underlined is-italic"
           id="title-placeholder"
         ></div>
         
